@@ -1,3 +1,6 @@
+* deprecations
+  * Renamed confirm_in to confirm_within
+
 == 0.2.3
 
 * enhancements
